# splurge-safe-io

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.cursor/rules/: python-standards.mdc
.github/instructions/: copilot-instructions.md
.github/workflows/: ci-lint-and-typecheck.yml  ci-os-matrix.yml
docs/: README-DETAILS.md
docs/api/: API-REFERENCE.md
docs/cli/: CLI-REFERENCE.md
docs/issues/: bug-empty-line-2025-10-09.md  issue-splurge-safe-io-2025-10-09.md
docs/plans/: plan-support-skip-empty-lines-2025-10-13.md
docs/research/: research-codebase-analysis-2025-10-08.md
examples/: README.md  api_usage.py  stream_process_write.py
scripts/: reproduce_empty_row.py  reproduce_issue_chunk_blank.py  trace_read_as_stream.py
splurge_safe_io/: __init__.py  constants.py  exceptions.py  path_validator.py  safe_text_file_reader.py  safe_text_file_writer.py
tests/: conftest.py
tests/integration/: test_branch_coverage.py  test_create_parents_integration.py  test_edge_case_coverage.py  test_edge_cases.py  test_more_coverage.py  test_original_exception.py  test_stream_blank_artifact.py  test_writer_error_branches.py
tests/unit/: test_constants.py  test_coverage_gaps.py  test_create_parents.py  test_crlf_split_boundary.py  test_exceptions.py  test_fuzz_read_stream.py  test_line_length_boundaries.py  test_newlines_and_encodings.py  test_open_safe_text_reader_as_stream.py  test_path_validator.py  test_path_validator_deprecation.py  test_platform_and_hypothesis.py  test_public_api_coverage.py  test_reader_consistency.py  test_reader_error_branches.py  test_reader_streaming_extra.py  test_reader_streaming_finalization.py  test_safe_text_file_reader.py  test_safe_text_file_writer.py
