[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splurge-safe-io"
version = "2025.4.2"
description = "A safe, atomic, and cross-platform way to handle text file I/O in Python."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jim Schilling"}
]
keywords = ["io", "file", "file-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "mypy>=1.18.2",
    "ruff>=0.13.3",
    "pytest-mock>=3.15.1",
    "hypothesis>=6.140.3",
]

[project.urls]
Homepage = "https://github.com/jim-schilling/splurge-safe-io"
Repository = "https://github.com/jim-schilling/splurge-safe-io"
Documentation = "https://github.com/jim-schilling/splurge-safe-io#readme"
"Bug Tracker" = "https://github.com/jim-schilling/splurge-safe-io/issues"

[project.scripts]
splurge-safe-io = "splurge_safe_io.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["splurge_safe_io*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-x -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: marks integration tests that exercise platform-level behavior",
    "serial: marks tests that must run serially (patch global state)",
]

[tool.hypothesis]
# Hypothesis configuration for property-based testing
max_examples = 100
deadline = 5000  # 5 seconds per test
suppress_health_check = ["too_slow"]
verbosity = "normal"

[tool.coverage.run]
source = ["splurge_safe_io"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by line-length
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
# Allow missing imports for vendored/external helper package used at runtime
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["examples.*"]
check_untyped_defs = false
disallow_untyped_defs = false
